@@ -510,10 +510,13 @@
  907 2015-11-26 define a myISettings interface to be used in the plugins
                 (instead of directly the mySettings object)
 
- 908 2015-11-26 replace ofo_dossier_get_name() with
-                ofo_dossier_get_meta_name()
+ 908 2015-11-26 remove ofo_dossier_get_name()
 
- 909
+ 909 2015-11-26 SIGNAL_DOSSIER_EXE_DATE_CHANGED: change to same signal
+                (exe_dates_changed) sent on main window so that it may
+                automatically update window title
+
+ 910
 
 -----------------------------------------------------------------------
  DONE
