@@ -41,12 +41,6 @@
 
 G_BEGIN_DECLS
 
-gchar    *ofa_dossier_misc_get_current_dbname( const gchar *dname );
-
-void      ofa_dossier_misc_set_current       ( const gchar *dname,
-													const GDate *begin,
-													const GDate *end );
-
 void      ofa_dossier_misc_set_new_exercice  ( const gchar *dname,
 													const gchar *dbname,
 													const GDate *begin_next,
